fix(security): set allowCredentials to false for production compatibility